Fix search results being too large

--- a/website/static/css/docsearch.css
+++ b/website/static/css/docsearch.css
@@ -12,7 +12,7 @@
 }
 
 .ds-dataset-1 {
-    width: 440px;
+    width: 250px;
 }
 
 .aa-dropdown-menu {
